sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:18: error: ')' expected but ';' found.
	} while(ecart >1 || sp=false;  ) 
                                    ^AlgCombSort:18: error: illegal start of statement
	} while(ecart >1 || sp=false;  ) 
                                       ^